Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-39925

Fix error reporting in create_libaio

    XMLWordPrintable

Details

    • Notable changes
    • Hide
      The error log associated when libaio failed to setup an asynchronous kernel interface was incorrect. It now reports the error code, a text version, and a reference to the manual page that shows a correction.

      Fix thanks to Andreas Schwab
      Show
      The error log associated when libaio failed to setup an asynchronous kernel interface was incorrect. It now reports the error code, a text version, and a reference to the manual page that shows a correction. Fix thanks to Andreas Schwab

    Description

      The io_setup function in libaio (aio_libio.cc) returns a negated errno value on error,
      but strerror expects a normal errno value.

      Attachments

        Issue Links

          Activity

            People

              gkodinov Georgi Kodinov
              gkodinov Georgi Kodinov
              Marko Mäkelä Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.