MDEV-39925: Fix error reporting in create_libaio

The io_setup function in libaio returns a negated errno value on error,
but strerror expects a normal errno value.